--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@schoolab/inject-icons": "^1.12.0",
+    "dompurify": "^3.2.0",
     "jquery": "3.7.1",
     "next": "14.2.5",
     "react": "^18",
