--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@schoolab/inject-css": "^1.10.33",
     "@schoolab/inject-icons": "^1.28.0",
     "dompurify": "^3.2.0",
     "jquery": "3.7.1",
